<resources>
    <string name="app_name">ReminderApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_time_to_remind_you_to_brush">Pick Time to Remind you to brush</string>
    <string name="alaram_is_set_at">Alaram is set at</string>
    <string name="update">update</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
</resources>